force-app/main/default/objects/echosign_dev1__SIGN_Object_Mapping__c/echosign_dev1__SIGN_Object_Mapping__c.object-meta.xml
<CustomObject>
    <label>Object Mapping</label>
    <nameField>
        <label>Object API Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>