force-app/main/default/objects/echosign_dev1__SIGN_Object_Mapping__c/fields/echosign_dev1__Display_Label__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Display_Label__c</fullName>
    <label>Display Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>