force-app/main/default/objects/echosign_dev1__SIGN_Object_Mapping__c/fields/echosign_dev1__Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Field_API_Name__c</fullName>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>