force-app/main/default/objects/echosign_dev1__SIGN_Object_Mapping__c/fields/echosign_dev1__Fully_Qualified_API__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Fully_Qualified_API__c</fullName>
    <label>Fully Qualified API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>